--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "last 1 chrome versions"
   ],
   "scripts": {
-    "serve": "rm -rf ./dist && NODE_ENV=development rollup --config --watch",
-    "build": "rm -rf ./dist && NODE_ENV=production rollup --config"
+    "serve": "rm -rf ./dist && cross-env NODE_ENV=development rollup --config --watch",
+    "build": "rm -rf ./dist && cross-env NODE_ENV=production rollup --config"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
     "core-js": "3",
+    "cross-env": "^6.0.3",
     "node-sass": "^4.13.0",
     "rollup": "^1.27.12",
     "rollup-plugin-babel": "^4.3.3",
