--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-typescript2": "^0.25.3",
+    "rxjs": "^6.5.3",
     "sass": "^1.23.7",
     "svelte": "^3.16.4",
     "svelte-preprocess": "^3.2.6",
